# pikuma-2dgameengine

./: CMakeLists.txt  README.md
assets/: README
cmake/: FindGLM.cmake  Findimgui.cmake  Findsol2.cmake
libs/imgui/: README
libs/sol/: README
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlledComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  ScriptComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h
src/ECS/: Component.cpp  Component.h  Entity.cpp  Entity.h  EntityAndRegistry.cpp  EntityAndRegistry.h  IComponent.h  IPool.h  Pool.h  Registry.cpp  Registry.h  Signature.h  System.cpp  System.h
src/EventBus/: Event.h  EventBus.h  EventCallback.h  IEventCallback.h
src/Events/: CollisionEvent.h  KeyPressedEvent.h
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderColliderSystem.h  RenderGuiSystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
